--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -11,7 +11,7 @@
   <% if(error) { %> 
     <h2><%= error %></h2>  
   <% } else { %> 
-    <h2>Skill #<%= todo._id %></h2>
+    <h2>Skill #<%= skill._id %></h2>
     <h3><%= skill.text %></h3>
     <p>Achieved: <%= skill.achieved ? "Yes" : "No" %></p>
   <% } %> 
