--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>New Skill</h1>
-  <form action="" method="" autocomplete="off">
+  <form action="/skills" method="POST" autocomplete="off">
       <input type="text" name="text">
       <button type="submit">Save Skill</button>
   </form>
