Add final css styling

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +12,12 @@
 </head>
 <body>
   <h1>Skills</h1>
+  <p>(Click Checkbox to Delete)</p>
+  <hr>
   <% if(error) { %> 
     <h2><%= error %></h2>  
   <% } %> 
-  <ul>
+  <ul class="all-form">
     <% skills.forEach(skill => { %>
       <li>
         <form 
@@ -28,6 +33,6 @@
       </li>
     <% }) %>
   </ul>
-  <a href="/skills/new">Add A Skill</a>
+  <a href="/skills/new" class="add-skill-link">Add A Skill</a>
 </body>
 </html>
