--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +12,7 @@
 </head>
 <body>
   <h1>New Skill</h1>
+  <hr>
   <form action="/skills" method="POST" autocomplete="off">
       <input type="text" name="text">
       <button type="submit">Save Skill</button>
