--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,58 @@
 body {
-  background-color: 87B6A7;
+  /* display: flex; */
+  /* flex-direction: column; */
+  background-color: #87B6A7;
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Nunito', sans-serif;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+hr {
+  border-bottom: #5B5941;
+  height: 1px;
 }
 
 a {
-  color: #00B7FF;
+  color: #5B5941;
+}
+
+h1, h2, h3, p {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: #5B5941;
+}
+
+
+li {
+  color: #5B5941;
+}
+
+.all-form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px
 }
 
 .delete-form {
   display: inline-block;
+  justify-content: center;
   margin-right: 10px;
 }
 
 .delete-form button {
-  color: red;
+  color: #5B5941;
+  background-color: #F79F79;
+  border: 1px, #5B5941;
 }
 
 li {
   list-style: none;
+}
+
+.add-skill-link {
+  margin-left: 40px;
 }
